<resources>
    <string name="app_name">Weather</string>

    <!-- city selection -->
    <string name="search_hint">Search for a city</string>
    <string name="city_deleted">City Deleted</string>
    <string name="my_location">My Location</string>

    <!-- main -->
    <string name="high_low">H:%d L:%d</string>
    <string name="feels_like">Feels Like</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="direction">Direction</string>
    <string name="gust">Gust</string>
    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="h1">1 Hour Volume</string>
    <string name="h3">3 Hour Volume</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="mps">%.2f m/s</string>
    <string name="mph">%.2f mph</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All Cities</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit_selected">Fahrenheit ✓</string>
    <string name="celsius_selected">Celsius ✓</string>
    <string name="kelvin_selected">Kelvin ✓</string>
    <string name="unit_fahrenheit">F</string>
    <string name="unit_celsius">C</string>
    <string name="unit_kelvin">K</string>

    <!-- placeholders -->
    <string name="city">City</string>
    <string name="temp">Temp</string>
    <string name="temp_value">%.2f</string>
    <string name="unit">Unit</string>
    <string name="description">Description</string>
    <string name="other_weather_details">Other Weather Details</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="search_result">City, State, Country</string>
    <string name="value">Value</string>

    <!-- dialog actions -->
    <string name="action_save">Save</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_undo">UNDO</string>
    <string name="action_done">Done</string>
    <string name="action_decline">No Thanks</string>
    <string name="action_update">Update</string>
    <string name="action_restart">Restart</string>
    <string name="action_link_google">Login with Google to Proceed</string>
</resources>